CSS font-variation-settings does not handle uppercase axis names in variable fonts https://bugs.webkit.org/show_bug.cgi?id=163546

Reviewed by Dean Jackson.

Source/WebCore:

Remove the extra toASCIILower() call.

Test: fast/text/variations/case-axis-names.html

* css/parser/CSSParser.cpp:
(WebCore::CSSParser::parseFontVariationTag):

LayoutTests:

* fast/text/variations/case-axis-names-expected.html: Added.
* fast/text/variations/case-axis-names.html: Added.


Canonical link: https://commits.webkit.org/181489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207581 268f45cc-cd09-0410-ab3c-d52691b4dbfc